--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,8 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
-/public/
-/resources/_gen/
 /assets/jsconfig.json
+.idea/drakomancer.iml
 # preferred log file name
 hugo.log
 hugo_stats.json
@@ -21,3 +20,4 @@ hugo.linux
 /resources/_gen/
 /public/
 /.idea/workspace.xml
+/.idea/
